--- a/style.css
+++ b/style.css
@@ -516,6 +516,14 @@ footer {
   margin: 15px 0;
   font-size: 14px;
 }
+.login-logo {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #1E3A8A;
+}
+
 
 
 
